[package]
name = "videostream"
version = "0.1.0"
authors = ["Ashley <expenses@airmail.cc>"]
repository = "https://github.com/expenses/videostream"
description = "A rust library that provided a simple iterator around video files."
license = "MIT"
readme = "README.md"

[dependencies]
image = "0.23.11"
ffmpeg = "0.3.0"
[dev-dependencies]
rustface = "*"
